deploy: e6333ee798bab466d6f4d9f5fafebb637f7f3c00

--- a/print.html
+++ b/print.html
@@ -43397,7 +43397,7 @@ fn main() {
 0x138008010
 </code></pre>
 <p>完美符合了我们对堆上数据的预期，hooray!</p>
-<h4 id="神龟莫测的编译器优化"><a class="header" href="#神龟莫测的编译器优化">神龟莫测的编译器优化</a></h4>
+<h4 id="神鬼莫测的编译器优化"><a class="header" href="#神鬼莫测的编译器优化">神鬼莫测的编译器优化</a></h4>
 <p>当然，你也可以选择相信编译器的优化，虽然很难识它真面目，同时它的行为也神鬼莫测，但是总归是在之前的例子中证明了，它确实可以，不是嘛？ = , =</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="糟糕的提前优化"><a class="header" href="#糟糕的提前优化">糟糕的提前优化</a></h1>
 <h2 id="函数调用"><a class="header" href="#函数调用">函数调用</a></h2>
